Changelog for FileExtractor

Content:
- version 0.2
- version 0.1 (12/05/2005)
- old entries for early development with name FindFiles

version 0.2 (??/??/????)
========================
* Error handling
    - missing package wxpython reported with a proper error message
* Integration of module for Image Generating


version 0.1 (12/05/2005)
========================
* Renaming to FileExtractor
    - new GUI Executable: FileExtractor.py (before findFilesGui.py)
    - new CLI Executable: FileExtractorCLI.py (before findFiles.py)
    - renaming applied to all readme files and help files
* updates in README
* added Documentation
    - Source Code Documentation
    - API Doc creator: Epydoc
    - command used: epydoc --inheritance listed -o html/ -n "File Extractor" *.py
* new Makefile for
    - creating documentation (with epydoc)
    - assembling the zip file for the online help
* Apply changes to CLI version (Settings class, ...)
* API documentation
* install guide

* Refactoring:
    - mark private attributes and functions as private
    - rename findfiles_core to FileExtractorCore

* addressed bugs
    - when importing the program is starting automatically

-----------------------------------------------
From here old name FindFiles and old versioning
-----------------------------------------------
version 0.6 (27/04/2005)
* Refactoring: 
    - Extract ExecutionSettings and ExecutionStatus classes (both in module ExecutionSettings)
    - Rewrite Communication between Core and GUI (now shared class instead of file communication)
* Extension in Help ... everything but some bits in signatures and the Research page finished

version 0.5 (27/04/2005)
* "proper" Result Dialog
* extensions in Readme (ToDo; Known Bugs, Signatures)
* File Size Signatures type: Added correction (in case the file size info inside the file is varying fromt the actual size as for WAV)
* fixed Bug: File end calculation was always 1 Byte to large
* Help Dialog Framework ready